# spout2pw

./: .gitignore  .gitmodules  README.md  build.sh  install_into_proton.sh  install_spout2pw.cmd  meson.build  meson.options  package.sh  spout2pw.c  spout2pw.inf  spout2pw.sh  spout2pw_unix.c  x86_64-w64-mingw32.txt
.github/workflows/: build-project.yaml  push.yaml
misc/: spout2pw.inf  spout2pw.sh
src/: spout2pw.c  spout2pw_unix.c  spout2pw_unix.h
subprojects/spoutdxtoc/: meson.build  spoutdxtoc.cpp  spoutdxtoc.def  spoutdxtoc.h
subprojects/spoutdxtoc/fixups/: Commctrl.h  Shellapi.h  TlHelp32.h  spoutDX.h
subprojects/spoutdxtoc/winestub/: Makefile.in  spoutdxtoc.spec  stub.c
tools/: get_wine_path.sh  package.sh
wine/: server_protocol.h
